# auth

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: database.rs  error.rs  lib.rs  main.rs  routes.rs
api/src/middleware/: auth.rs  database.rs
api/src/routes/: email_password.rs  oauth.rs  username_password.rs
api/src/routes/oauth/: github.rs
auth/: Cargo.toml
auth/migrations/2024-07-26-211816_create_user_profiles/: up.sql
auth/migrations/2024-07-30-122751_create_github_oauth_credential/: down.sql
auth/migrations/2024-08-07-123017_add_disabled_prop/: down.sql  up.sql
auth/src/: credential.rs  error.rs  schema.rs  user.rs
auth/src/credential/: email_password.rs  github.rs  username_password.rs
migrations/2024-07-26-183915_create_email_password_credential/: down.sql  up.sql
migrations/2024-07-26-211816_create_user_profiles/: down.sql
migrations/2024-07-30-122751_create_github_oauth_credential/: up.sql
migrations/2024-08-07-104258_add_username_password_credentials/: down.sql  up.sql
src/: credential.rs  database.rs  error.rs  lib.rs  schema.rs  user.rs
src/credential/: email_password.rs  username_password.rs
