[package]
name = "auth"
version = "0.1.29"
edition = "2021"
authors = ["Federico Fusco"]

[dependencies]
thiserror = "1.0.63"
argon2 = "0.5.3"
dotenvy = "0.15"

[dependencies.uuid] 
version = "1.10.0"
features = ["v4", "fast-rng", "serde"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "uuid"]