[workspace]
members = ["api", "auth"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.63"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.diesel]
version = "2.2.0"
features = ["postgres", "uuid", "r2d2", "chrono"]

[workspace.dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "serde"] 