[package]
name = "auth"
version = "0.1.3"
edition = "2021"
authors = ["Federico Fusco <me@federicofusco.dev>"]

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
thiserror = "1.0.63"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "uuid", "r2d2", "chrono"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "serde"] 