[package]
name = "api"
version = "0.1.2"
edition = "2021"
authors = ["Federico Fusco <me@federicofusco.dev>"]

[dependencies]
actix-web = "4"
actix-service = "2.0.2"
actix-identity = "0.7.1"
futures = "0.3.30"
dotenvy = "0.15"
r2d2 = "0.8.10"
oauth2 = "4.4.2"
reqwest = "*"
serde_json = "1"
thiserror = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
uuid = { workspace = true }
strum_macros = "0.26"

[dependencies.actix-session]
version = "0.9.0"
features = ["cookie-session"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.auth]
version = "0.1.2"
path = "../auth"